--- a/packages/ts-demo/package.json
+++ b/packages/ts-demo/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "exceljs": "^4.3.0"
   }
 }
