--- a/packages/webpack-demo/package.json
+++ b/packages/webpack-demo/package.json
@@ -3,18 +3,31 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
+  "sideEffects": false,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack serve --open --config webpack.dev.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.7.1",
+    "csv-loader": "^3.0.3",
+    "express": "^4.18.1",
+    "html-webpack-plugin": "^5.5.0",
+    "json5": "^2.2.1",
+    "style-loader": "^3.3.1",
+    "toml": "^3.0.0",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-middleware": "^5.3.1",
+    "webpack-dev-server": "^4.8.1",
+    "xml-loader": "^1.2.1",
+    "yaml": "^2.0.1"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "webpack-merge": "^5.8.0"
   }
 }
