--- a/packages/vue3-demo/package.json
+++ b/packages/vue3-demo/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "lint": "npx eslint --max-warnings=0 --fix",
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
@@ -12,9 +13,15 @@
     "vue": "^3.4.21"
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
     "@vitejs/plugin-vue": "^2.3.3",
+    "eslint": "9.x",
+    "eslint-plugin-vue": "^9.26.0",
+    "globals": "^15.4.0",
     "typescript": "^4.5.4",
+    "typescript-eslint": "^7.12.0",
     "vite": "^2.9.9",
+    "vite-plugin-eslint": "^1.8.1",
     "vue-tsc": "^0.34.7"
   }
 }
