--- a/packages/vue3-demo/package.json
+++ b/packages/vue3-demo/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.2.0",
+    "less": "^4.2.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
